# 5G_NetworkSlicing_Analysis

./: .flake8  .gitignore  Makefile  README.md  SLA_Violation.ipynb  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: model_config.yaml
deployment/docker/: Dockerfile.api  Dockerfile.streaming  Dockerfile.training
docs/: GETTING_STARTED.md
notebooks/: 01_model_demo.py
scripts/: check_training_results.py  evaluate_model.py  run_tests.py  test_data_pipeline.py  test_environment.py  train_rl_agent.py  visualize_results.py
src/: __init__.py
src/api/: __init__.py  app.py
src/api/routes/: allocation.py  health.py  monitoring.py  prediction.py
src/data/: data_loader.py  preprocessing.py
src/models/: __init__.py  base_model.py
src/models/reinforcement_learning/: __init__.py  dqn_agent.py  environment.py
tests/: README.md  __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_api.py  test_data_loader.py  test_models.py  test_preprocessing.py
